--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@testing-library/vue": "^5.6.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
@@ -20,6 +21,10 @@
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.0.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.23",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -30,6 +35,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "vue-jest": "^3.0.4"
