--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "faker": "^5.5.3",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "miragejs": "^0.1.41",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "vue-jest": "^3.0.4"
